# Carbon-Launcher

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/news/: page.tsx
src/app/settings/: page.tsx
src/components/core/: Sidebar.tsx  Window.tsx
src/components/ui/: dialog.tsx  neptuneStatus.tsx  toggle.tsx
src/config/: builds.ts
src/modules/builds/: addbuild.ts  handlers.ts  launch.ts  state.ts
~/.tauri/: crbon.key  crbon.key.pub
